# z-score

./: .dockerignore  .gitignore  DOCKER-GUIDE.md  READEME.md  README.md  docker-compose.images.yml  docker-compose.prod.yml  docker-compose.yml  env.example  inspect_header.py  main.py  next.config.mjs  pyproject.toml
.cursor/docs/: DEPLOYMENT.md  DOCKER-GUIDE.md  api_specification.md  data_pipeline.md  database_schema.md  frontend_architecture.md  operations_manual.md  ppm_implementation_guide.md  prediction_model.md
.cursor/rules/: backend-python.mdc  development-workflow.mdc  frontend-nextjs.mdc  project-overview.mdc
.docker/: build-images.bat  build-images.sh  deploy.bat  deploy.sh  export-images.bat  export-images.sh  push-images.bat  push-images.sh
backend/: Dockerfile
backend/app/: main.py  schemas.py
backend/app/api/: analysis.py  backtest.py  data.py  raw_data.py
backend/app/core/: config.py  database.py
backend/app/crud/: analysis.py  raw_data.py
backend/app/db/: database.py  models.py
backend/app/models/: analysis.py  handy_raw.py
backend/app/processing/: loader.py  reader.py  transformer.py
backend/app/schemas/: analysis.py
backend/app/scripts/: bulk_import.py
docs/: cam_phase_angle_mapping.md  comprehensive_data_analysis.md  database_schema.md  detailed_angle_field_analysis.md  development_plan.md  proposed_column_mapping.md
frontend/: .dockerignore  Dockerfile  next.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/public/: mockServiceWorker.js
scripts/: README.md  load_data.py  verify_data.py
(+453 files in other folders)
